feat: Implement comprehensive RBAC permission system
Implemented a complete Role-Based Access Control (RBAC) system with hierarchical menu structure and API endpoint permissions.

## Features

### Permission System Architecture
- Multi-level RBAC with Users, Roles, and Groups
- Hierarchical menu structure (Menu -> Tab -> Screen)
- API endpoint permission mapping
- Tenant-aware data isolation

### Domain Models
- User: Core user entity with tenant isolation
- Role: Permission templates for users
- Group: User grouping for organizational structure
- Menu: Top-level navigation items
- MenuTab: Second-level navigation under menus
- MenuScreen: Leaf-level screens with API permissions
- ApiEndpoint: REST API endpoints with HTTP methods
- Junction tables: UserRole, UserGroup, GroupRole, RoleMenu, ScreenApi

### Security Features
- Spring Security integration with JWT
- Permission-based access control
- Method-level security annotations
- Tenant isolation for multi-tenancy
- Soft delete support across all entities

### Database Schema
- UUID v7 primary keys for all entities
- Composite indexes for query optimization
- Flyway migration: V4__Create_user_permission_tables.sql
- Proper foreign key relationships

### Business Logic
- Custom exception handling (BusinessException)
- Standardized error codes (ErrorCode, PermissionErrorCode)
- Service layer with permission checks
- Repository pattern with JPA Specifications

### Frontend Integration
- Updated Organizations page with permission UI
- React components for user management
- TypeScript interfaces for type safety

## Technical Details

**New Dependencies:**
- spring-boot-starter-security
- jjwt-api, jjwt-impl, jjwt-jackson (0.12.6)

**Database Tables:**
- users, roles, groups
- menus, menu_tabs, menu_screens
- api_endpoints
- user_roles, user_groups, group_roles
- role_menus, screen_apis

**Security Config:**
- JWT token authentication
- Role-based authorization
- Public endpoints: /api/auth/**, /api/public/**
- Protected